# gkr-protocol

./: .config.toml  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: prover.rs
gkr-protocol/.oldgit/: FETCH_HEAD  ORIG_HEAD  config  index
gkr-protocol/.oldgit/logs/: HEAD
gkr-protocol/.oldgit/logs/refs/remotes/origin/: master
gkr-protocol/.oldgit/refs/heads/: master
gkr-protocol/src/: gkr.rs
gkr-protocol/src/gkr/: fiat_shamir.rs  sumcheck.rs
gkr-protocol/src/graph/: layer.rs
src/: gkr.rs  graph.rs  lib.rs  poly.rs
src/core/: error.rs  graph.rs  layer.rs  mod.rs  node.rs
src/gkr/: error.rs  fiat_shamir.rs  mimc.rs  mod.rs  prover.rs  sumcheck.rs
src/graph/: error.rs  graph.rs  layer.rs  node.rs
