[package]
name = "gkr-protocol"
version = "0.1.0"
edition = "2021"

[lib]
name = "gkr_protocol"  # Name of the library crate
path = "src/lib.rs"     # Entry point for the library

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
light-poseidon = "0.2.0"
num-bigint = "0.4.6"
rand = "0.8.5"
thiserror = "1.0.64"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "prover"
# harness = false
